updated unit tests and added constructor injections