@@ -4,19 +4,17 @@ import com.saprone.food_recipe_generator.model.Ingredient;
 import com.saprone.food_recipe_generator.repository.IngredientRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.web.client.RestTemplate;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
 class IngredientServiceTest {
 
     @Mock
@@ -36,15 +34,21 @@ class IngredientServiceTest {
     @Test
     void testFetchAndSaveIngredients_whenDatabaseIsEmpty() {
         // Arrange
-        String jsonResponse = "{\"meals\":[{\"strIngredient\":\"Ingredient1\"},{\"strIngredient\":\"Ingredient2\"}]}";
-        when(ingredientRepository.count()).thenReturn(0L); // Mock the count to return 0
-        when(restTemplate.getForObject(any(String.class), eq(String.class))).thenReturn(jsonResponse);
+        String mockResponse = "{\"meals\": [{\"strIngredient\": \"Sugar\"}, {\"strIngredient\": \"Salt\"}]}";
+        when(ingredientRepository.count()).thenReturn(0L);
+        when(restTemplate.getForObject(any(String.class), eq(String.class))).thenReturn(mockResponse);
 
         // Act
         ingredientService.fetchAndSaveIngredients();
 
         // Assert
-        verify(ingredientRepository, times(2)).save(any(Ingredient.class)); // Verify that save was called twice
+        ArgumentCaptor<Ingredient> ingredientCaptor = ArgumentCaptor.forClass(Ingredient.class);
+        verify(ingredientRepository, times(2)).save(ingredientCaptor.capture()); // Verify that save was called twice
+
+        List<Ingredient> capturedIngredients = ingredientCaptor.getAllValues();
+        assertEquals(2, capturedIngredients.size());
+        assertEquals("Sugar", capturedIngredients.get(0).getName());
+        assertEquals("Salt", capturedIngredients.get(1).getName());
     }
 
     @Test
@@ -56,30 +60,36 @@ class IngredientServiceTest {
         ingredientService.fetchAndSaveIngredients();
 
         // Assert
-        verify(ingredientRepository, never()).save(any(Ingredient.class)); // Verify that save was never called
+        verify(restTemplate, never()).getForObject(any(String.class), eq(String.class));
+        verify(ingredientRepository, never()).save(any()); // Verify that save was never called
+    }
+
+    @Test
+    void testFetchAndSaveIngredients_whenJsonIsInvalid() {
+        // Arrange
+        when(ingredientRepository.count()).thenReturn(0L);
+        when(restTemplate.getForObject(any(String.class), eq(String.class))).thenReturn("invalid json");
+
+        // Act
+        ingredientService.fetchAndSaveIngredients();
+
+        // Assert
+        verify(ingredientRepository, never()).save(any());
     }
 
     @Test
     void testGetAllIngredients() {
         // Arrange
-        List<Ingredient> mockIngredients = new ArrayList<>();
-
-        Ingredient ingredient1 = new Ingredient();
-        ingredient1.setName("Sugar");
-        mockIngredients.add(ingredient1);
-
-        Ingredient ingredient2 = new Ingredient();
-        ingredient2.setName("Salt");
-        mockIngredients.add(ingredient2);
-
-        when(ingredientRepository.findAll()).thenReturn(mockIngredients);
+        Ingredient ingredient = new Ingredient();
+        ingredient.setName("Tomato");
+        when(ingredientRepository.findAll()).thenReturn(Collections.singletonList(ingredient));
 
         // Act
         List<Ingredient> ingredients = ingredientService.getAllIngredients();
 
         // Assert
-        assertEquals(2, ingredients.size());
-        assertEquals("Sugar", ingredients.get(0).getName());
-        assertEquals("Salt", ingredients.get(1).getName());
+        assertNotNull(ingredients);
+        assertEquals(1, ingredients.size());
+        assertEquals("Tomato", ingredients.getFirst().getName());
     }
 }
